@@ -1,6 +1,6 @@
-ALL_GOALS={md5,sha1,sha256,tiger,whirlpool,hashdeep}
+ALL_GOALS={md5,sha1,sha256,sha3,tiger,whirlpool,hashdeep}
 
-man_MANS=md5deep.1 sha1deep.1 sha256deep.1 tigerdeep.1 whirlpooldeep.1 hashdeep.1
+man_MANS=md5deep.1 sha1deep.1 sha256deep.1 sha3deep.1 tigerdeep.1 whirlpooldeep.1 hashdeep.1
 
 # We erase the old man pages, just in case they might be symbolic links
 # (symbolic links were used in a previous release)
@@ -11,6 +11,7 @@ install-man: update-manpages
 update-manpages: md5deep.1
 	$(INSTALL) $< sha1deep.1
 	$(INSTALL) $< sha256deep.1
+	$(INSTALL) $< sha3deep.1
 	$(INSTALL) $< tigerdeep.1
 	$(INSTALL) $< whirlpooldeep.1
 
