@@ -17,9 +17,9 @@
 #define FALSE  0
 #define ONE_MEGABYTE  1048576
 
-
 #define MAX_ALGORITHM_RESIDUE_SIZE 256
-#define MAX_ALGORITHM_CONTEXT_SIZE 256
+// Raised for SHA-3
+#define MAX_ALGORITHM_CONTEXT_SIZE 384
 
 #ifdef _WIN32
 /* For some reason this doesn't work properly with mingw */
